[gd_scene load_steps=31 format=2]

[ext_resource path="res://ui/Dashboard/DashboardNew.gd" type="Script" id=1]
[ext_resource path="res://ui/SensorGraphs/RainLevelSensorGraph.gd" type="Script" id=2]
[ext_resource path="res://ui/SensorGraphs/WindLevelSensorGraph.gd" type="Script" id=3]
[ext_resource path="res://assets/achievement_icons/XIcon.png" type="Texture" id=4]
[ext_resource path="res://assets/fonts/upheavtt_24.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/fonts/toolbarTitle.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/buttons/Info_button.png" type="Texture" id=8]
[ext_resource path="res://ui/SensorGraphs/SensorGraph.tscn" type="PackedScene" id=10]
[ext_resource path="res://assets/fonts/upheavtt_40.tres" type="DynamicFont" id=15]
[ext_resource path="res://ui/Dashboard/CityStatsBar.gd" type="Script" id=16]

[sub_resource type="GDScript" id=4]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

uniform float value = 1.0;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	if (value != 1.0) {
		if (COLOR.r > 0.3 && COLOR.b > 0.3 && COLOR.g > 0.3) {
			COLOR.rgb = vec3(value);
		}
	}
}"

[sub_resource type="ShaderMaterial" id=11]
shader = SubResource( 5 )
shader_param/value = 1.0
script = SubResource( 4 )

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="InputEventKey" id=10]
scancode = 16777217

[sub_resource type="ShortCut" id=17]
shortcut = SubResource( 10 )

[sub_resource type="StyleBoxEmpty" id=28]

[sub_resource type="StyleBoxEmpty" id=24]

[sub_resource type="StyleBoxEmpty" id=25]

[sub_resource type="StyleBoxEmpty" id=22]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="Theme" id=27]

[sub_resource type="StyleBoxEmpty" id=26]

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.188235, 0.184314, 0.184314, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.333333, 0.333333, 0.333333, 1 )

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.262745, 0.262745, 0.262745, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0.333333, 0.333333, 0.333333, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10

[node name="Dashboard" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -19.0
margin_bottom = 2.0
color = Color( 0.647059, 0.647059, 0.647059, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 50.0

[node name="QuitButton" type="Button" parent="."]
material = SubResource( 11 )
margin_left = 1221.0
margin_top = 12.0
margin_right = 1261.0
margin_bottom = 52.0
rect_scale = Vector2( 1, 1.00458 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/focus = SubResource( 14 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
shortcut = SubResource( 17 )
icon = ExtResource( 4 )
icon_align = 1

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = 8.0
margin_right = 288.0
margin_bottom = 741.0
color = Color( 0.333333, 0.333333, 0.333333, 1 )

[node name="CityStatsTitle" type="Label" parent="ColorRect2"]
anchor_right = 0.138
anchor_bottom = 0.411
margin_left = 9.0
margin_top = 15.0
margin_right = 128.36
margin_bottom = -231.37
custom_fonts/font = ExtResource( 5 )
text = "City Stats"

[node name="CityStatsBar" type="VBoxContainer" parent="ColorRect2"]
margin_left = 10.0
margin_top = 50.0
margin_right = 283.0
margin_bottom = 660.0
script = ExtResource( 16 )

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect2/CityStatsBar"]
margin_right = 273.0
margin_bottom = 16.0

[node name="MoneyTitle" type="Label" parent="ColorRect2/CityStatsBar/HBoxContainer"]
margin_right = 51.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 6 )
text = "Money"

[node name="MoneyInfoButton" type="Button" parent="ColorRect2/CityStatsBar/HBoxContainer"]
margin_left = 55.0
margin_right = 71.0
margin_bottom = 16.0
grow_horizontal = 0
grow_vertical = 0
custom_styles/hover = SubResource( 28 )
custom_styles/pressed = SubResource( 24 )
custom_styles/focus = SubResource( 25 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = SubResource( 18 )
icon = ExtResource( 8 )

[node name="MoneyInfo" type="ColorRect" parent="ColorRect2/CityStatsBar"]
visible = false
margin_top = 20.0
margin_right = 262.0
margin_bottom = 60.0
rect_min_size = Vector2( 262, 40 )
theme = SubResource( 27 )
color = Color( 0.231373, 0.231373, 0.231373, 1 )

[node name="MoneyInfoText" type="Label" parent="ColorRect2/CityStatsBar/MoneyInfo"]
margin_left = 5.0
margin_top = 5.0
margin_right = 262.0
margin_bottom = 35.0
text = "This blurb is about money.
Money info goes here."
autowrap = true

[node name="Money" type="Label" parent="ColorRect2/CityStatsBar"]
margin_top = 20.0
margin_right = 273.0
margin_bottom = 34.0

[node name="HSeparator" type="HSeparator" parent="ColorRect2/CityStatsBar"]
margin_top = 38.0
margin_right = 273.0
margin_bottom = 42.0

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect2/CityStatsBar"]
margin_top = 46.0
margin_right = 273.0
margin_bottom = 62.0

[node name="PopulationTitle" type="Label" parent="ColorRect2/CityStatsBar/HBoxContainer2"]
margin_right = 98.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 6 )
text = "Population"

[node name="PopulationInfoButton" type="Button" parent="ColorRect2/CityStatsBar/HBoxContainer2"]
margin_left = 102.0
margin_right = 118.0
margin_bottom = 16.0
grow_horizontal = 0
grow_vertical = 0
custom_styles/hover = SubResource( 26 )
custom_styles/pressed = SubResource( 24 )
custom_styles/focus = SubResource( 25 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = SubResource( 18 )
icon = ExtResource( 8 )

[node name="PopulationInfo" type="ColorRect" parent="ColorRect2/CityStatsBar"]
visible = false
margin_top = 110.0
margin_right = 262.0
margin_bottom = 150.0
rect_min_size = Vector2( 262, 40 )
color = Color( 0.231373, 0.231373, 0.231373, 1 )

[node name="PopulationInfoText" type="Label" parent="ColorRect2/CityStatsBar/PopulationInfo"]
margin_left = 5.0
margin_top = 5.0
margin_right = 262.0
margin_bottom = 36.0
text = "This blurb is about population.
Population info goes here."
autowrap = true

[node name="Population" type="Label" parent="ColorRect2/CityStatsBar"]
margin_top = 66.0
margin_right = 273.0
margin_bottom = 80.0

[node name="HSeparator2" type="HSeparator" parent="ColorRect2/CityStatsBar"]
margin_top = 84.0
margin_right = 273.0
margin_bottom = 88.0

[node name="HBoxContainer3" type="HBoxContainer" parent="ColorRect2/CityStatsBar"]
margin_top = 92.0
margin_right = 273.0
margin_bottom = 108.0

[node name="HappinessTitle" type="Label" parent="ColorRect2/CityStatsBar/HBoxContainer3"]
margin_right = 89.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 6 )
text = "Happiness"

[node name="HappinessInfoButton" type="Button" parent="ColorRect2/CityStatsBar/HBoxContainer3"]
margin_left = 93.0
margin_right = 109.0
margin_bottom = 16.0
grow_horizontal = 0
grow_vertical = 0
custom_styles/hover = SubResource( 26 )
custom_styles/pressed = SubResource( 24 )
custom_styles/focus = SubResource( 25 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = SubResource( 18 )
icon = ExtResource( 8 )

[node name="HappinessInfo" type="ColorRect" parent="ColorRect2/CityStatsBar"]
visible = false
margin_top = 200.0
margin_right = 262.0
margin_bottom = 240.0
rect_min_size = Vector2( 262, 40 )
color = Color( 0.231373, 0.231373, 0.231373, 1 )

[node name="HappinessInfoText" type="Label" parent="ColorRect2/CityStatsBar/HappinessInfo"]
margin_left = 5.0
margin_top = 5.0
margin_right = 262.0
margin_bottom = 36.0
text = "This blurb is about happiness.
happiness info goes here."
autowrap = true

[node name="Happiness" type="Label" parent="ColorRect2/CityStatsBar"]
margin_top = 112.0
margin_right = 273.0
margin_bottom = 126.0
text = "???"

[node name="HSeparator3" type="HSeparator" parent="ColorRect2/CityStatsBar"]
margin_top = 130.0
margin_right = 273.0
margin_bottom = 134.0

[node name="HBoxContainer4" type="HBoxContainer" parent="ColorRect2/CityStatsBar"]
margin_top = 138.0
margin_right = 273.0
margin_bottom = 154.0

[node name="EconomicGrowthTitle" type="Label" parent="ColorRect2/CityStatsBar/HBoxContainer4"]
margin_right = 146.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 6 )
text = "Economic Growth"

[node name="EconomicGrowthButton" type="Button" parent="ColorRect2/CityStatsBar/HBoxContainer4"]
margin_left = 150.0
margin_right = 166.0
margin_bottom = 16.0
grow_horizontal = 0
grow_vertical = 0
custom_styles/hover = SubResource( 26 )
custom_styles/pressed = SubResource( 24 )
custom_styles/focus = SubResource( 25 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = SubResource( 18 )
icon = ExtResource( 8 )

[node name="EconomicGrowthInfo" type="ColorRect" parent="ColorRect2/CityStatsBar"]
visible = false
margin_top = 290.0
margin_right = 262.0
margin_bottom = 330.0
rect_min_size = Vector2( 262, 40 )
color = Color( 0.231373, 0.231373, 0.231373, 1 )

[node name="EconomicInfoText" type="Label" parent="ColorRect2/CityStatsBar/EconomicGrowthInfo"]
margin_left = 5.0
margin_top = 5.0
margin_right = 262.0
margin_bottom = 36.0
text = "This blurb is about economic growth
Economic growth info goes here."
autowrap = true

[node name="EconomicGrowth" type="Label" parent="ColorRect2/CityStatsBar"]
margin_top = 158.0
margin_right = 273.0
margin_bottom = 172.0
text = "???"

[node name="HSeparator4" type="HSeparator" parent="ColorRect2/CityStatsBar"]
margin_top = 176.0
margin_right = 273.0
margin_bottom = 180.0

[node name="HBoxContainer5" type="HBoxContainer" parent="ColorRect2/CityStatsBar"]
margin_top = 184.0
margin_right = 273.0
margin_bottom = 200.0

[node name="WeatherPrepTitle" type="Label" parent="ColorRect2/CityStatsBar/HBoxContainer5"]
margin_right = 196.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 6 )
text = "Weather Preparedness"

[node name="WeatherPrepButton" type="Button" parent="ColorRect2/CityStatsBar/HBoxContainer5"]
margin_left = 200.0
margin_right = 216.0
margin_bottom = 16.0
grow_horizontal = 0
grow_vertical = 0
custom_styles/hover = SubResource( 26 )
custom_styles/pressed = SubResource( 24 )
custom_styles/focus = SubResource( 25 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = SubResource( 18 )
icon = ExtResource( 8 )

[node name="WeatherInfo" type="ColorRect" parent="ColorRect2/CityStatsBar"]
visible = false
margin_top = 380.0
margin_right = 262.0
margin_bottom = 440.0
rect_min_size = Vector2( 262, 60 )
color = Color( 0.231373, 0.231373, 0.231373, 1 )

[node name="WeatherPrepInfoText" type="Label" parent="ColorRect2/CityStatsBar/WeatherInfo"]
margin_left = 5.0
margin_top = 5.0
margin_right = 262.0
margin_bottom = 36.0
text = "This blurb is about weather preparedness.
Weather preparedness info goes here."
autowrap = true

[node name="WeatherPreparedness" type="Label" parent="ColorRect2/CityStatsBar"]
margin_top = 204.0
margin_right = 273.0
margin_bottom = 218.0
text = "???"

[node name="HSeparator5" type="HSeparator" parent="ColorRect2/CityStatsBar"]
margin_top = 222.0
margin_right = 273.0
margin_bottom = 226.0

[node name="HBoxContainer6" type="HBoxContainer" parent="ColorRect2/CityStatsBar"]
margin_top = 230.0
margin_right = 273.0
margin_bottom = 246.0

[node name="TaxesTitle" type="Label" parent="ColorRect2/CityStatsBar/HBoxContainer6"]
margin_right = 73.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 6 )
text = "City Tax"

[node name="TaxesButton" type="Button" parent="ColorRect2/CityStatsBar/HBoxContainer6"]
margin_left = 77.0
margin_right = 93.0
margin_bottom = 16.0
grow_horizontal = 0
grow_vertical = 0
custom_styles/hover = SubResource( 26 )
custom_styles/pressed = SubResource( 24 )
custom_styles/focus = SubResource( 25 )
custom_styles/disabled = SubResource( 22 )
custom_styles/normal = SubResource( 18 )
icon = ExtResource( 8 )

[node name="TaxesInfo" type="ColorRect" parent="ColorRect2/CityStatsBar"]
visible = false
margin_top = 490.0
margin_right = 262.0
margin_bottom = 530.0
rect_min_size = Vector2( 262, 40 )
color = Color( 0.231373, 0.231373, 0.231373, 1 )

[node name="TaxInfoText" type="Label" parent="ColorRect2/CityStatsBar/TaxesInfo"]
margin_left = 5.0
margin_top = 5.0
margin_right = 262.0
margin_bottom = 36.0
text = "This blurb is about taxes
Taxes info goes here."

[node name="PropertyTaxTitle" type="Label" parent="ColorRect2/CityStatsBar"]
margin_top = 250.0
margin_right = 273.0
margin_bottom = 264.0
text = "Property Tax"

[node name="HBoxContainer7" type="HBoxContainer" parent="ColorRect2/CityStatsBar"]
margin_top = 268.0
margin_right = 273.0
margin_bottom = 284.0

[node name="PropertyTaxSlider" type="HSlider" parent="ColorRect2/CityStatsBar/HBoxContainer7"]
margin_right = 220.0
margin_bottom = 16.0
rect_min_size = Vector2( 220, 16 )
max_value = 10.0
step = 0.1
value = 0.1

[node name="PropertyTaxValue" type="Label" parent="ColorRect2/CityStatsBar/HBoxContainer7"]
margin_left = 224.0
margin_top = 1.0
margin_right = 224.0
margin_bottom = 15.0

[node name="SalesTaxTitle" type="Label" parent="ColorRect2/CityStatsBar"]
margin_top = 288.0
margin_right = 273.0
margin_bottom = 302.0
text = "Sales Tax"

[node name="HBoxContainer8" type="HBoxContainer" parent="ColorRect2/CityStatsBar"]
margin_top = 306.0
margin_right = 273.0
margin_bottom = 322.0

[node name="SalesTaxSlider" type="HSlider" parent="ColorRect2/CityStatsBar/HBoxContainer8"]
margin_right = 220.0
margin_bottom = 16.0
rect_min_size = Vector2( 220, 16 )
max_value = 2.0
step = 0.02
value = 0.2

[node name="SalesTaxValue" type="Label" parent="ColorRect2/CityStatsBar/HBoxContainer8"]
margin_left = 224.0
margin_top = 1.0
margin_right = 224.0
margin_bottom = 15.0

[node name="IncomeTaxTitle" type="Label" parent="ColorRect2/CityStatsBar"]
margin_top = 326.0
margin_right = 273.0
margin_bottom = 340.0
text = "Income Tax"

[node name="HBoxContainer9" type="HBoxContainer" parent="ColorRect2/CityStatsBar"]
margin_top = 344.0
margin_right = 273.0
margin_bottom = 360.0

[node name="IncomeTaxSlider" type="HSlider" parent="ColorRect2/CityStatsBar/HBoxContainer9"]
margin_right = 220.0
margin_bottom = 16.0
rect_min_size = Vector2( 220, 16 )
max_value = 11.0
step = 0.11
value = 0.11

[node name="IncomeTaxValue" type="Label" parent="ColorRect2/CityStatsBar/HBoxContainer9"]
margin_left = 224.0
margin_top = 1.0
margin_right = 224.0
margin_bottom = 15.0

[node name="Panel" type="Panel" parent="."]
margin_left = 304.0
margin_top = 8.0
margin_right = 1209.0
margin_bottom = 717.0
custom_styles/panel = SubResource( 31 )

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
margin_left = 87.0
margin_top = 67.0
margin_right = 889.0
margin_bottom = 671.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer"]
margin_right = 702.0
margin_bottom = 1226.0
custom_constants/separation = 50

[node name="Sea" type="Panel" parent="Panel/ScrollContainer/VBoxContainer"]
margin_right = 702.0
margin_bottom = 374.0
rect_min_size = Vector2( 0, 374 )
custom_styles/panel = SubResource( 29 )

[node name="SeaLevelSensor" parent="Panel/ScrollContainer/VBoxContainer/Sea" instance=ExtResource( 10 )]
margin_left = 67.0
margin_top = 52.0
margin_right = 642.0
margin_bottom = 336.0

[node name="Panel" type="Panel" parent="Panel/ScrollContainer/VBoxContainer/Sea"]
margin_right = 702.0
margin_bottom = 30.0
custom_styles/panel = SubResource( 30 )

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/Sea/Panel"]
margin_right = 702.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 6 )
text = "Tide"
align = 1
valign = 1

[node name="TideSensorNeededLabel" type="Label" parent="Panel/ScrollContainer/VBoxContainer/Sea"]
visible = false
anchor_right = 0.138
anchor_bottom = 0.411
margin_left = 8.0
margin_top = 154.0
margin_right = 601.124
margin_bottom = 22.642
custom_fonts/font = ExtResource( 5 )
text = "Tide Gauge Needed"
align = 1

[node name="Rain" type="Panel" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 424.0
margin_right = 702.0
margin_bottom = 802.0
rect_min_size = Vector2( 702, 378 )
custom_styles/panel = SubResource( 29 )

[node name="RainSensor" parent="Panel/ScrollContainer/VBoxContainer/Rain" instance=ExtResource( 10 )]
margin_left = 67.0
margin_top = 52.0
margin_right = 642.0
margin_bottom = 336.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="Panel/ScrollContainer/VBoxContainer/Rain"]
margin_right = 702.0
margin_bottom = 30.0
custom_styles/panel = SubResource( 30 )

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/Rain/Panel"]
margin_right = 702.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 6 )
text = "Rain"
align = 1
valign = 1

[node name="RainSensorNeededLabel" type="Label" parent="Panel/ScrollContainer/VBoxContainer/Rain"]
visible = false
anchor_right = 0.138
anchor_bottom = 0.411
margin_left = 8.0
margin_top = 154.0
margin_right = 601.124
margin_bottom = 22.642
custom_fonts/font = ExtResource( 5 )
text = "Rain Gauge Needed"
align = 1

[node name="Wind" type="Panel" parent="Panel/ScrollContainer/VBoxContainer"]
margin_top = 852.0
margin_right = 702.0
margin_bottom = 1226.0
rect_min_size = Vector2( 0, 374 )
custom_styles/panel = SubResource( 29 )

[node name="WindSensor" parent="Panel/ScrollContainer/VBoxContainer/Wind" instance=ExtResource( 10 )]
margin_left = 67.0
margin_top = 52.0
margin_right = 642.0
margin_bottom = 336.0
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="Panel/ScrollContainer/VBoxContainer/Wind"]
margin_right = 702.0
margin_bottom = 30.0
custom_styles/panel = SubResource( 30 )

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer/Wind/Panel"]
margin_right = 702.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 6 )
text = "Wind"
align = 1
valign = 1

[node name="WindSensorNeededLabel" type="Label" parent="Panel/ScrollContainer/VBoxContainer/Wind"]
visible = false
anchor_right = 0.138
anchor_bottom = 0.411
margin_left = 8.0
margin_top = 154.0
margin_right = 601.124
margin_bottom = 22.642
custom_fonts/font = ExtResource( 5 )
text = "Wind Gauge Needed"
align = 1

[node name="ColorRect" type="ColorRect" parent="Panel"]
margin_right = 904.0
margin_bottom = 50.0
color = Color( 0.262745, 0.262745, 0.262745, 1 )

[node name="Label2" type="Label" parent="Panel/ColorRect"]
margin_right = 894.0
margin_bottom = 50.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
custom_fonts/font = ExtResource( 15 )
text = "Gauge Graphs"
align = 1
valign = 1

[connection signal="button_down" from="QuitButton" to="." method="_on_QuitButton_button_down"]
[connection signal="mouse_entered" from="QuitButton" to="." method="_on_QuitButton_mouse_entered"]
[connection signal="mouse_exited" from="QuitButton" to="." method="_on_QuitButton_mouse_exited"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="mouse_entered" from="ColorRect2/CityStatsBar/HBoxContainer/MoneyInfoButton" to="ColorRect2/CityStatsBar" method="_on_MoneyInfoButton_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect2/CityStatsBar/HBoxContainer/MoneyInfoButton" to="ColorRect2/CityStatsBar" method="_on_MoneyInfoButton_mouse_exited"]
[connection signal="mouse_entered" from="ColorRect2/CityStatsBar/HBoxContainer2/PopulationInfoButton" to="ColorRect2/CityStatsBar" method="_on_PopulationInfoButton_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect2/CityStatsBar/HBoxContainer2/PopulationInfoButton" to="ColorRect2/CityStatsBar" method="_on_PopulationInfoButton_mouse_exited"]
[connection signal="mouse_entered" from="ColorRect2/CityStatsBar/HBoxContainer3/HappinessInfoButton" to="ColorRect2/CityStatsBar" method="_on_HappinessInfoButton_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect2/CityStatsBar/HBoxContainer3/HappinessInfoButton" to="ColorRect2/CityStatsBar" method="_on_HappinessInfoButton_mouse_exited"]
[connection signal="mouse_entered" from="ColorRect2/CityStatsBar/HBoxContainer4/EconomicGrowthButton" to="ColorRect2/CityStatsBar" method="_on_EconomicGrowthButton_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect2/CityStatsBar/HBoxContainer4/EconomicGrowthButton" to="ColorRect2/CityStatsBar" method="_on_EconomicGrowthButton_mouse_exited"]
[connection signal="mouse_entered" from="ColorRect2/CityStatsBar/HBoxContainer5/WeatherPrepButton" to="ColorRect2/CityStatsBar" method="_on_WeatherPrepButton_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect2/CityStatsBar/HBoxContainer5/WeatherPrepButton" to="ColorRect2/CityStatsBar" method="_on_WeatherPrepButton_mouse_exited"]
[connection signal="mouse_entered" from="ColorRect2/CityStatsBar/HBoxContainer6/TaxesButton" to="ColorRect2/CityStatsBar" method="_on_TaxesButton_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect2/CityStatsBar/HBoxContainer6/TaxesButton" to="ColorRect2/CityStatsBar" method="_on_TaxesButton_mouse_exited"]
[connection signal="value_changed" from="ColorRect2/CityStatsBar/HBoxContainer7/PropertyTaxSlider" to="." method="_on_PropertyTaxSlider_value_changed"]
[connection signal="value_changed" from="ColorRect2/CityStatsBar/HBoxContainer8/SalesTaxSlider" to="." method="_on_SalesTaxSlider_value_changed"]
[connection signal="value_changed" from="ColorRect2/CityStatsBar/HBoxContainer9/IncomeTaxSlider" to="." method="_on_IncomeTaxSlider_value_changed"]
